tests/lean/wildcardAlt.lean.expected.out
wildcardAlt.lean:10:2-10:16: error: Invalid occurrence of the wildcard alternative `| _ => ...`: It must be the last alternative
wildcardAlt.lean:15:2-15:16: error: Invalid occurrence of the wildcard alternative `| _ => ...`: It must be the last alternative
